# beacon-to-blue

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
beacon_to_blue/: __init__.py  cli.py  compiler.py  evaluate.py  schema.py
datasets/benign/: http_lookalike.jsonl
datasets/malicious_like/: http_beacon_minimal.jsonl
detections/sigma/: linux_crontab_modification.yml
docs/: ATTACK_MAPPING.md
docs/behaviors/: http_beacon_minimal.md
osquery/packs/: cron_persistence_pack.yml
policy/: EXECUTIVE_BRIEF.md
simulator/: generate_events.py  requirements.txt
spec/: schema.json
spec/examples/: cron_persistence_then_beacon.yml  http_beacon_minimal.yml  python_agent_beacon.yml
tests/: test_compile_outputs.py  test_evaluation.py  test_specs_validate.py
