[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beacon-to-blue"
version = "0.1.0"
description = "Translate beacon behaviors into defender-first artifacts"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Tyler Coatsworth"}]
dependencies = [
  "pyyaml==6.0.2",
  "jsonschema==4.23.0",
  "jinja2==3.1.5",
]

[project.optional-dependencies]
dev = ["pytest==8.3.2"]

[project.scripts]
beacon-to-blue = "beacon_to_blue.cli:main"
